--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,22 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastparquet>=2024.11.0",
     "ipykernel>=6.30.1",
     "kagglehub>=0.3.12",
     "matplotlib>=3.10.5",
     "numpy>=2.3.2",
     "pandas>=2.3.1",
+    "pyarrow>=21.0.0",
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
 ]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+only-include = ["src"]
+sources = ["src"]
+dev-mode-dirs = ["src"]
