--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "microsoft-azure-predictive-maintenance"
-version = "0.1.0"
+version = "1.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "fastapi>=0.116.1",
     "fastparquet>=2024.11.0",
     "ipykernel>=6.30.1",
     "kagglehub>=0.3.12",
