--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,10 @@ dependencies = [
     "numpy>=2.3.2",
     "pandas>=2.3.1",
     "pyarrow>=21.0.0",
+    "python-multipart>=0.0.20",
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
+    "uvicorn>=0.35.0",
 ]
 
 [build-system]
